tests/NormalTests/paczka1/small_fuzzy/34718884.err
Error in line 2: ut7 S792 65,98
Error in line 8: A914 S792 12,9
